# life-manager-app

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  entrypoint.sh  gunicorn_config.py  pyproject.toml  pytest.ini
deploy-script/: deploy.sh
iac/: main.tf  network.tf  provider.tf  vars-dev.tf  vars-prod.tf
life-manager-app/: manage.py
life-manager-app/apps/finance/: admin.py  apps.py  models.py  urls.py  views.py
life-manager-app/apps/finance/management/commands/: seed.py
life-manager-app/apps/finance/migrations/: 0001_initial.py
life-manager-app/apps/finance/templates/finance/pages/: home.html  login.html  purchases-by-month.html
life-manager-app/apps/habit_tracker/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
life-manager-app/apps/habit_tracker/migrations/: 0001_initial.py  0002_alter_habitschedule_time_spent.py  0003_alter_dayofweekchoice_day_of_week_and_more.py
life-manager-app/apps/habit_tracker/templates/habit_tracker/pages/: create-habit.html  old_week.html  update-recurrence.html  week.html
life-manager-app/apps/habit_tracker/utils/: view_utils.py
life-manager-app/base_static/global/css/: base-styles.css
life-manager-app/base_templates/global/: base.html  base_no_header.html
life-manager-app/base_templates/global/partials/: footer.html  head.html  header.html
life-manager-app/life_manager_app/: asgi.py  settings.py  urls.py  wsgi.py
life-manager-app/tests/habit_tracker_tests/: test_models.py
