[tool.black]
line-length = 110
target-version = ["py38"]


[tool.isort]
skip_glob = ["**/migrations/**"]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_local_folder = "apps,utils,tests,life_manager_app"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.poetry]
name = "life-manager-app"
version = "0.1.0"
description = ""
authors = ["MatheusBLopes <matheusblopes10@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
prettyconf = "^2.2.1"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
gevent = "^23.9.1"
pre-commit = "^3.6.0"



[tool.poetry.group.dev.dependencies]
faker = "^19.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
